--- a/matchit/src/pages/home/home.scss
+++ b/matchit/src/pages/home/home.scss
@@ -13,11 +13,6 @@ page-home {
         }
     }
 
-    .bgimg{
-        background-image: url('../../assets/imgs/wilson.jpg');
-        background-repeat: no-repeat;
-        background-size: cover;
-   }    
    ion-avatar .player-img{
         border-radius: 50%;
         overflow: hidden;
